[package]
name = "arec"
version = "1.0.1"
description = "Windows Audio Loopback Recorder"   
edition = "2024"
authors = ["Jonn Sandon <jonn42@gmail.com>"]

[package.metadata]
development_date = "2026-02-02"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
wasapi = "0.22"
shine-rs = "0.1"
crossbeam-channel = "0.5"
ctrlc = "3"
